[package]
name = "guapa_bot"
version = "0.2.0"
authors = ["Bruno A. Muciño <mucinoab@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serenity = { version = "0.10.10", default-features = false, features = ["gateway", "rustls_backend", "standard_framework"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }

[profile.dev]
debug = false
