[package]
name = "guapa_bot"
version = "0.2.0"
authors = ["Bruno A. Muciño <mucinoab@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies]
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
poise = { version = "0.6" }

[profile.dev]
debug = false
