[package]
name = "guapa_bot"
version = "0.2.0"
authors = ["Bruno A. Muciño <mucinoab@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies]
rand = { version = "0.9", default-features = false, features = ["std", "thread_rng"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47", default-features = false, features = ["macros", "rt", "rt-multi-thread", "sync"] }
poise = { version = "0.6" }

[profile.dev]
debug = false
